--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
     padding: 0px;
 }
 body{
-    background-color: antiquewhite;
+    
 }
+#wrapper{
+    margin-top: 400px;
+    display: grid;
+    place-items: center;
+}
+
 canvas{
-
-    border: 1px solid #000;
     position: absolute;
-}
-
-input{
-    margin-top: 620px;
 }
